[tool.poetry]
name = "fastui-live"
version = "0.1.0"
description = ""
authors = ["Pedro Silva <silvasantospedro91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastui = "^0.5.2"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
